# py-cli-101

./: main.py  pyproject.toml  selection.py  test.py
Project/Calculator/: main.py
Project/File Manager/: main.py  test.py
Project/Greeting/: main.py
